# ImageViewerPlugin

./: .editorconfig  CMakeLists.txt  PluginInfo.json  README.md  conanfile.py
.github/actions/action-conan-linux-build/: action.yml
.github/actions/action-conan-windows-build/: action.yml
.github/workflows/: build.yml
res/: resources.qrc  resources_imgageviewer.qrc
res/shaders/: ImageFragment.glsl  PointsFragment.glsl  PointsVertex.glsl  SelectionFragment.glsl  SelectionToolFragment.glsl  SelectionToolOffScreenFragment.glsl  SelectionToolOffScreenVertex.glsl  SelectionVertex.glsl
src/: Actor.cpp  Actor.h  Bounds.cpp  Bounds.h  Brush.cpp  Brush.h  BrushProp.h  BrushSelectionActor.cpp  BrushSelectionActor.h  CanvasWidget.cpp  CanvasWidget.h  Channel.cpp  Channel.h  ChannelAction.cpp  ChannelAction.h  ClustersDataset.cpp  ClustersDataset.h  ClustersItem.cpp  ClustersItem.h  ClustersLayer.cpp  ClustersLayer.h  ClustersLayerWidget.cpp  ClustersLayerWidget.h  ClustersLayerWidget.ui  ClustersSettings.cpp  ClustersSettings.h  ColorImageActor.cpp  ColorImageActor.h  ColorImageProp.cpp  ColorImageProp.h  ColorImageQuad.cpp  ColorImageQuad.h  ColorMap.cpp  ColorMap.h  ColorMapComboBox.cpp  ColorMapComboBox.h  ColorMapModel.cpp  ColorMapModel.h  ColorPickerPushButton.cpp  ColorPickerPushButton.h  (+360 more)
src/Actors/: SelectionPickerActor.cpp
src/Props/: ColorImage.cpp  ColorImageProp.h  Polyline2DFragment.glsl  SelectionBufferFragment.glsl  SelectionOutlineFragment.glsl
src/Shapes/: Shape.cpp
